--- a/app/components/map/noise.map.label.component.html
+++ b/app/components/map/noise.map.label.component.html
@@ -1,6 +1,6 @@
 <span *hideItDevice="['mobile']">
-	<img *showItBootstrap="['xl','lg','md']" class="noiseLabelLarge" src="..\app\images\noiseMaps.png">
-    <img *showItBootstrap="['sm','xs']" class="noiseLabelMedium" src="..\app\images\noiseMaps.png">
+	<img *showItBootstrap="['xl','lg']" class="noiseLabelLarge" src="..\app\images\noiseMaps.png">
+    <img *showItBootstrap="['md','sm','xs']" class="noiseLabelMedium" src="..\app\images\noiseMaps.png">
 </span>
 
 <div *showItDevice="['mobile']">
