--- a/app/components/about.app.component.html
+++ b/app/components/about.app.component.html
@@ -1,12 +1,12 @@
 <div id="aboutAppId" class="aboutApp" tooltip="O aplikaci" tooltipPopupDelay="1500" tooltipPlacement="bottom">
-	<button (click)="lgModal.show()" type="button" class="btn btn-default aboutAppButton" *showItBootstrap="['xl','lg','md']">
+	<button (click)="lgModal.show()" type="button" class="btn btn-default aboutAppButton" *showItBootstrap="['xl','lg']">
 		<!--[class.aboutAppButton]="!isMobile()" [class.aboutAppMobileButton]="isMobile()" -->
         <!--<img class="aboutAppIcoDown" src="..\app\images\question.png">-->
 		<span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>
 		O webu
    </button>
 
-   <button (click)="lgModal.show()" type="button" class="btn btn-default aboutAppButton aboutAppSmallButton" *hideItBootstrap="['xl','lg','md']" [class.aboutAppSmallButton]="!isMobile()" [class.aboutAppMobileButton]="isMobile()">
+   <button (click)="lgModal.show()" type="button" class="btn btn-default aboutAppButton aboutAppSmallButton" *showItBootstrap="['md','sm','xs']" [class.aboutAppSmallButton]="!isMobile()" [class.aboutAppMobileButton]="isMobile()">
 	   <!-- -->
         <!--<img class="aboutAppIcoDown" src="..\app\images\question.png">-->
 		<span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>
