--- a/app/components/map/overlays.search.component.html
+++ b/app/components/map/overlays.search.component.html
@@ -12,5 +12,7 @@
 <!--MOBILE -->
 <div class="overlaysSearchMobile" *showItDevice="['mobile']">
     <noise-label></noise-label>
-    <div class="overlaysSearchMobileLandscapeSearch"><search></search></div>    
+    <div class="overlaysSearchMobileLandscapeSearch">
+        <search></search>
+    </div>    
 </div>
