--- a/app/components/map/search.component.html
+++ b/app/components/map/search.component.html
@@ -1,4 +1,9 @@
-<input id="pac-input" class="form-control searchInput" type="text" placeholder="Vyhledat místo" aria-describedby="inputGroupSuccess1Status">
+<span class="input-group">
+	<input id="pac-input" class="form-control searchInput" type="text" placeholder="Vyhledat místo" aria-describedby="inputGroupSuccess1Status">
+	<span class="input-group-addon">
+        <img class="magnifier" src="..\app\images\lupa.png"> 
+	</span>
+</span>
 
 <!--<div *hideItDevice="['mobile']">
 	<input *showItBootstrap="['xl','lg','md']" id="pac-input" class="controls form-control pac-input" type="text" placeholder="Vyhledat místo"
