--- a/app/components/map/overlays.menu.component.html
+++ b/app/components/map/overlays.menu.component.html
@@ -13,15 +13,17 @@ tooltip="Výběr mapové vrstvy" tooltipPopupDelay="1500" tooltipPlacement="bott
 			<ul id="overlayGroup" dropdownMenu role="menu" aria-labelledby="single-button" class="layer-button">
 				<li class="layersMapHeading"><span>Strategická hluková mapa</span></li>
 				<template ngFor let-overlayGroup [ngForOf]="overlayGroups" let-i="index" [ngForTrackBy]="trackByFn">
-					<li role="menuitem"> <span class="layerHeader">{{overlayGroup.name}}</span></li>
-					<li role="menuitem" *ngFor="let overlay of overlayGroup.overlays">
-						<a class="dropdown-item" href="#">
-              <span class="position" *ngIf="overlay.position>0">{{overlay.position}}</span>
-							<span class="position" *ngIf!="overlay.position>0">&nbsp; &nbsp;</span>
-							<input type="checkbox" class="layerChBox desktopChBox" [(ngModel)]="overlay.checked" value={{overlay.value}} (ngModelChange)="onChkboxClick(overlay)"/>
-							<span class="layerText">{{overlay.text}}</span>
-						</a>
-					</li>
+					<div class="oneGroupeItem">
+						<li role="menuitem"> <span class="layerHeader">{{overlayGroup.name}}</span></li>
+						<li role="menuitem" class="menuOverlayItem disabled" *ngFor="let overlay of overlayGroup.overlays">
+							<a class="dropdown-item disabled" href="#">
+              	<span class="position" *ngIf="overlay.position>0">{{overlay.position}}</span>
+								<span class="position" *ngIf!="overlay.position>0">&nbsp; &nbsp;</span>
+								<input type="checkbox" class="layerChBox desktopChBox" [(ngModel)]="overlay.checked" value={{overlay.value}} (ngModelChange)="onChkboxClick(overlay)"/>
+								<span class="layerText">{{overlay.text}}</span>
+							</a>
+						</li>
+					</div>
 				</template>
 				<li class="divider dropdown-divider"></li>
 				<li role="menuitem" class="layerLegend">
