--- a/app/components/slider.component.css
+++ b/app/components/slider.component.css
@@ -5,16 +5,20 @@
     font-weight: 400;
 }
 
+#rectangle3 {
+    position: absolute;
+    left: 76px;
+    bottom: 0px;
+    overflow-x: hidden;
+}
+
 @media screen and (orientation:portrait)
 {
    .rect3-M
    {  
-    z-index: 12;
-    position: relative;
-    width: 100%;
-    padding-right: 18px;
     margin-left: -67px;
-    padding-bottom: 17px; 
+    padding-bottom: 17px;
+    width: calc(100% - 18px);
    }
 }
 
@@ -22,17 +26,14 @@
 {
    .rect3-M
    {
-    z-index: 12;
-    position: relative;
-    width: 100%;
-    padding-right: 62px;
     margin-left: -24px;
     padding-bottom: 17px;
+    width: calc(100% - 62px);
    }
 }
 
 .rect3 {
-    position: relative;
+    position: absolute;
     width:100%;
     padding-right: 135px;
     left: 76px;
@@ -40,7 +41,6 @@
 }
 
 #rectangle2 {
-    /*z-index: 11;*/
     padding-right: 36px;
     padding-left: 36px;
     padding-top: 2px;
