pridano vyhledavani na klik lupy

--- a/app/components/map/search.component.html
+++ b/app/components/map/search.component.html
@@ -1,6 +1,6 @@
 <span class="input-group">
 	<input id="pac-input" class="form-control searchInput" type="text" placeholder="Vyhledat místo" aria-describedby="inputGroupSuccess1Status">
-	<span class="input-group-addon">
+	<span class="input-group-addon" (click)="startSearch()">
         <img class="magnifier" src="..\app\images\lupa.png"> 
 	</span>
 </span>
