--- a/app/components/app.component.html
+++ b/app/components/app.component.html
@@ -2,10 +2,13 @@
 <!--<div class="row">-->
 
 <map></map>
-<slider></slider>
+<div style="display:none;">
+  <slider></slider>
+  <logo></logo>
+</div>
 <controls></controls>
 <overlays-search></overlays-search>
 <base-map-legend></base-map-legend>
-<logo></logo>
+
 <!--<test></test>-->
 <!--<tabs-test></tabs-test>-->
