--- a/app/components/map/logo.component.html
+++ b/app/components/map/logo.component.html
@@ -2,6 +2,6 @@
     <img class="logoImage" src="..\app\images\developed by.png">
 </a>
 
-<a href="http://www.oksystem.com/cz/" id="okSystemLogo-M" class="okhome" target="_blank" *showItDevice="['mobile']">
+<a href="http://www.oksystem.com/cz/" id="okSystemLogo" class="okhome-M" target="_blank" *showItDevice="['mobile']">
     <img class="logoImage" src="..\app\images\developed_by_small.png">
 </a>
