uprava zmeny css

--- a/src/app/components/about.app.component.css
+++ b/src/app/components/about.app.component.css
@@ -1,8 +1,8 @@
 .aboutAppMobileButton {
-  padding: 9px;
-  margin-top: -34px;
+  /*padding: 9px;*/
+  /*margin-top: -34px;*/
 }
 
-.aboutAppSmallButton {
+/*.aboutAppSmallButton {
   padding: 9px;
-}
+}*/
