--- a/src/app/components/statistics/senzor.menu.component.css
+++ b/src/app/components/statistics/senzor.menu.component.css
@@ -15,13 +15,13 @@
   margin-right: 10px;
 }
 
-.senzor-button-mobile .btn {
+/*.senzor-button-mobile .btn {
   padding: 9px;
-}
+}*/
 
-.smallBtn {
+/*.smallBtn {
   padding: 9px;
-}
+}*/
 
 .senzorItem {
   width: 100%;
