--- a/src/app/components/map/base.map.legend.component.css
+++ b/src/app/components/map/base.map.legend.component.css
@@ -56,7 +56,7 @@
   font-family: Roboto,Arial,sans-serif;
   font-weight: bold;
   height: 15px;
-  font-size: 11;
+  font-size: 11px;
 
   -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
   -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
