--- a/src/app/components/map/search.component.css
+++ b/src/app/components/map/search.component.css
@@ -5,8 +5,8 @@
 }
 
 .input-group-addon {
-  background-color: #009781;
-  padding: 9px;
+  /*background-color: #009781;*/
+  /*padding: 9px;*/
   border-radius: 0px 5px 5px 0px;
   -moz-border-radius: 0px 5px 5px 0px;
   -webkit-border-radius: 0px 5px 5px 0px;
