--- a/src/app/components/map/search.component.html
+++ b/src/app/components/map/search.component.html
@@ -1,7 +1,8 @@
 <span class="input-group">
 	<input id="pac-input" class="form-control searchInput" type="text" placeholder="Vyhledat místo" aria-describedby="inputGroupSuccess1Status">
 	<span class="input-group-addon" (click)="startSearch()">
-        <img class="magnifier" src="assets\images\lupa.png"> 
+	<span class="glyphicon glyphicon-search" aria-hidden="true">
+        <!--<img class="magnifier" src="assets\images\lupa.png"> -->
 	</span>
 </span>
 
