--- a/src/app/components/map/overlays.menu.component.html
+++ b/src/app/components/map/overlays.menu.component.html
@@ -11,7 +11,7 @@ tooltip="Výběr mapové vrstvy" tooltipPopupDelay="1500" tooltipPlacement="bott
 				<span class="caret"></span>
 			</button>
 			<ul id="overlayGroup" dropdownMenu role="menu" aria-labelledby="single-button" class="layer-button">
-				<li class="layersMapHeading"><span>Strategická hluková mapa za rok 2008</span></li>
+				<li class="layersMapHeading"><span>Strategická hluková mapa<br> za rok 2007</span></li>
 				<template ngFor let-overlayGroup [ngForOf]="overlayGroups" let-i="index" [ngForTrackBy]="trackByFn">
 					<div class="oneGroupeItem">
 						<li role="menuitem"> <span class="layerHeader">{{overlayGroup.name}}</span></li>
@@ -52,11 +52,11 @@ tooltip="Výběr mapové vrstvy" tooltipPopupDelay="1500" tooltipPlacement="bott
 		  <button type="button" class="close" (click)="lgModal.hide()" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
-		  <h4 class="modal-title">Vyberte mapové vrstvy</h4>
+		  <h4 class="modal-title">Výběr mapových vrstev</h4>Strategická hluková mapa za rok 2007
 		</div>
 		
 		<div class="modal-body">
-			<span class="layersMapHeading">Strategická hluková mapa za rok 2008</span>
+			<!--<span class="layersMapHeading">Strategická hluková mapa za rok 2007</span>-->
 		  <div class="layerHeaderMobile" *ngFor="let overlayGroup of overlayGroups, let ndx = index">
 			<label class="group">{{overlayGroup.name}}</label>
 		    <div class="checkbox" *ngFor="let overlay of overlayGroup.overlays"> 
