--- a/src/app/components/about.app.component.html
+++ b/src/app/components/about.app.component.html
@@ -22,8 +22,9 @@
 					<p>OKsystem je česká softwarová společnost s mezinárodní působností. Na trhu informačních technologií jsme již od roku
 						1990. Naše programy používají desítky tisíc uživatelů v soukromém sektoru i veřejné správě. Máme zákazníky zejména
 						v České republice a dodáváme inovativní software i v Evropě a USA.</p>
-					<p>Více informací naleznete na http://www.oksystem.com/cz/</p>
-
+					<p>Více informací naleznete na <a href="http://www.oksystem.cz">http://www.oksystem.cz</a></p>
+					<br>
+					<center><iframe id="ytplayer" type="text/html" src="https://www.youtube.com/embed/z4BkBlnEaUk?autoplay=0" frameborder="0"></iframe></center>
 					<br>
 					<br>
 
