Nova vezre videa.

--- a/src/app/components/about.app.component.html
+++ b/src/app/components/about.app.component.html
@@ -24,7 +24,7 @@
 						v České republice a dodáváme inovativní software i v Evropě a USA.</p>
 					<p>Více informací naleznete na <a href="http://www.oksystem.cz">http://www.oksystem.cz</a></p>
 					<br>
-					<iframe id="ytplayer" type="text/html" src="https://www.youtube.com/embed/z4BkBlnEaUk?autoplay=0" frameborder="0"></iframe>
+					<iframe id="ytplayer" type="text/html" src="https://www.youtube.com/embed/aT-Tc_rrIKs?autoplay=0" frameborder="0"></iframe>
 					<br>
 					<br>
 
