--- a/src/app/components/map.component.html
+++ b/src/app/components/map.component.html
@@ -1,2 +1,2 @@
-<div id="{{mapId}}" [style.height]="height"></div>
+<div id="{{mapId}}"></div>
 <loading id="loadingOnMap" [hidden]="!showLoading"></loading>
