pridana loading animace

--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -9,6 +9,7 @@
 <controls></controls>
 <overlays-search></overlays-search>
 <base-map-legend></base-map-legend>
+<loading></loading>
 
 <!--<test></test>-->
 <!--<tabs-test></tabs-test>-->
