--- a/src/app/components/loading.component.html
+++ b/src/app/components/loading.component.html
@@ -1,10 +1,15 @@
-<div id="fountainG">
-	<div id="fountainG_1" class="fountainG"></div>
-	<div id="fountainG_2" class="fountainG"></div>
-	<div id="fountainG_3" class="fountainG"></div>
-	<div id="fountainG_4" class="fountainG"></div>
-	<div id="fountainG_5" class="fountainG"></div>
-	<div id="fountainG_6" class="fountainG"></div>
-	<div id="fountainG_7" class="fountainG"></div>
-	<div id="fountainG_8" class="fountainG"></div>
+<!--<button type="button" class="btn btn-primary" (click)="showChildModal()">Open child modal</button>-->
+<div bsModal #childModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+	<div class="modal-dialog modal-sm modal-dialog-custom">
+		<div class="modal-content">
+			<div class="modal-body ">
+				<div class="spinner-text">Nahrávám data</div>
+				<div class="spinner">
+					<div class="bounce1"></div>
+					<div class="bounce2"></div>
+					<div class="bounce3"></div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
