zmena detekce pro landscape na mobilech (media query), do popisu cidla pribyla informace o tom zda jsou fiktivni

--- a/src/app/components/map/overlays.search.component.css
+++ b/src/app/components/map/overlays.search.component.css
@@ -40,7 +40,7 @@
   width: calc(100% - 118px)
 }
 
-@media screen and (orientation:landscape)
+@media screen and (min-aspect-ratio: 13/9)
 {
   .overlaysSearchMobileLandscapeSearch {
     margin-top: -29px;
