--- a/src/app/components/about.app.component.html
+++ b/src/app/components/about.app.component.html
@@ -47,9 +47,8 @@
 					<p>Do map je navíc doplněna funkčnost:</p>
 						<ul>
 							<li><strong>Vyberte čidlo:</strong> výběr on-line čidel dle umístění</li>
-							<li><strong>Statistiky čidla:</strong> zobrazení údajů statistik měření v grafu a tabulce
-								<!--<li>Ve spodní části okna je zobrazen posuvník, který umožňuje časové omezení hodnot zobrazených v grafu a tabulce.</li>-->
-							</li>
+							<li><strong>Statistiky čidla:</strong> zobrazení údajů statistik měření v grafu a tabulce</li>
+							<ul><li>Ve spodní části okna je zobrazen posuvník, který umožňuje časové omezení hodnot zobrazených v grafu a tabulce.</li></ul>
 							<li><strong>Výběr vrstev:</strong> možnost doplnění podkladových strategických hlukových map</li>
 							<li>Ve spodní části mapy je posuvník definující datum a čas hodnot zobrazených v tooltipu čidla.</li>
 						</ul>	
