--- a/src/app/components/about.app.component.html
+++ b/src/app/components/about.app.component.html
@@ -53,8 +53,8 @@
 							<li>Ve spodní části mapy je posuvník definující datum a čas hodnot zobrazených v tooltipu čidla.</li>
 						</ul>	
 					<p>Více viz. instruktážní video:</p>
-						<iframe  *hideItDevice="['mobile']"  id="ytplayer" type="text/html" src="https://www.youtube.com/embed/aT-Tc_rrIKs?autoplay=0" frameborder="0" class="showOnDesktop"></iframe>
-						<iframe  *showItDevice="['mobile']"  id="ytplayer" type="text/html" src="https://www.youtube.com/embed/aT-Tc_rrIKs?autoplay=0" frameborder="0" class="showOnMobileLandPotrait"></iframe>
+						<iframe  *hideItDevice="['mobile']"  id="ytplayer" type="text/html" src="https://www.youtube.com/embed/aT-Tc_rrIKs?autoplay=0" frameborder="0" class="showOnDesktop" allowfullscreen="allowfullscreen" mozallowfullscreen="mozallowfullscreen" msallowfullscreen="msallowfullscreen" oallowfullscreen="oallowfullscreen" webkitallowfullscreen="webkitallowfullscreen"></iframe>
+						<iframe  *showItDevice="['mobile']"  id="ytplayer" type="text/html" src="https://www.youtube.com/embed/aT-Tc_rrIKs?autoplay=0" frameborder="0" class="showOnMobileLandPotrait" allowfullscreen="allowfullscreen" mozallowfullscreen="mozallowfullscreen" msallowfullscreen="msallowfullscreen" oallowfullscreen="oallowfullscreen" webkitallowfullscreen="webkitallowfullscreen"></iframe>
 					<br>
 					<br>
 					<br>
