--- a/src/app/components/map/overlays.search.component.css
+++ b/src/app/components/map/overlays.search.component.css
@@ -50,7 +50,7 @@
 
 @media screen and (max-aspect-ratio: 13/9) { 
   .overlaysSearchMobileCont {
-    margin-top: 13px;
+    /*margin-top: 13px;*/
     /*margin-left: 196px;*/
   } 
 }
