--- a/src/app/components/map/overlays.menu.component.html
+++ b/src/app/components/map/overlays.menu.component.html
@@ -1,8 +1,4 @@
-<div id="overlaysMenuId" class="overlaysMenuDesktop" 
-
-
-*showItBootstrap="['xl','lg','md']"
-
+<div id="overlaysMenuId" class="overlaysMenuDesktop" *showItBootstrap="['xl','lg','md']"
 tooltip="Výběr mapové vrstvy" tooltipPopupDelay="1500" tooltipPlacement="bottom">
 		<div class="btn-group layer-button" dropdown autoClose="disabled">
 			<button id="single-button" type="button" class="btn btn-default layer-button" dropdownToggle autoClose="disabled">
@@ -11,12 +7,15 @@ tooltip="Výběr mapové vrstvy" tooltipPopupDelay="1500" tooltipPlacement="bott
 				<span class="caret"></span>
 			</button>
 			<ul id="overlayGroup" dropdownMenu role="menu" aria-labelledby="single-button" class="layer-button">
-				<li class="layersMapHeading"><span>Strategická hluková mapa<br> za rok 2007</span></li>
+				<li class="layersMapHeading"><span>Strategická hluková mapa<br> za rok 2007 (zdroj: 
+				<a href="http://geoportal.gov.cz/php/catalogue/libs/cswclient/cswClientRun.php?template=iso2htmlFull.xsl&metadataURL=http%3A//geoportal.gov.cz/php/micka/csw/index.php%3FService%3DCSW%26request%3DGetRecordById%26version%3D2.0.2%26outputSchema%3Dhttp%3A//www.isotc211.org/2005/gmd%26id%3D541acc18-ba3c-4d3e-98c6-39c8c0a80137" target="_blank">
+				ČÚZK</a>
+				)</span></li>
 				<template ngFor let-overlayGroup [ngForOf]="overlayGroups" let-i="index" [ngForTrackBy]="trackByFn">
 					<div class="oneGroupeItem">
 						<li role="menuitem"> <span class="layerHeader">{{overlayGroup.name}}</span></li>
 						<li role="menuitem" class="menuOverlayItem disabled" *ngFor="let overlay of overlayGroup.overlays">
-							<a class="dropdown-item disabled" href="#">
+							<a class="dropdown-item disabled no-decorated" href="#">
               	<span class="position" *ngIf="overlay.position>0">{{overlay.position}}</span>
 								<span class="position" *ngIf!="overlay.position>0">&nbsp; &nbsp;</span>
 								<input type="checkbox" class="layerChBox desktopChBox" [(ngModel)]="overlay.checked" value={{overlay.value}} (ngModelChange)="onChkboxClick(overlay)"/>
@@ -51,8 +50,11 @@ tooltip="Výběr mapové vrstvy" tooltipPopupDelay="1500" tooltipPlacement="bott
 		<div class="modal-header">
 		  <button type="button" class="close" (click)="lgModal.hide()" aria-label="Close">
             <span aria-hidden="true">&times;</span>
-          </button>
-		  <h4 class="modal-title">Výběr mapových vrstev</h4>Strategická hluková mapa za rok 2007
+          </button> 
+		  <h4 class="modal-title">Výběr mapových vrstev</h4>Strategická hluková mapa za rok 2007 (zdroj: 
+				<a href="http://geoportal.gov.cz/php/catalogue/libs/cswclient/cswClientRun.php?template=iso2htmlFull.xsl&metadataURL=http%3A//geoportal.gov.cz/php/micka/csw/index.php%3FService%3DCSW%26request%3DGetRecordById%26version%3D2.0.2%26outputSchema%3Dhttp%3A//www.isotc211.org/2005/gmd%26id%3D541acc18-ba3c-4d3e-98c6-39c8c0a80137" target="_blank">
+				ČÚZK</a>
+				)
 		</div>
 		
 		<div class="modal-body">
