--- a/src/app/components/statistics/statistics.component.html
+++ b/src/app/components/statistics/statistics.component.html
@@ -1,7 +1,7 @@
 ﻿<!--STANDARD-->
 <div id="statisticsButtonId" class="statStandard" *hideItDevice="['mobile']">
-	<button type="button" class="btn btn-default statisMenuButtonDesktop" (click)="isHidden = !isHidden"  (click)="onOpen()" [class.focus]="!isHidden"
-		tooltip="Zobrazení statistiky" tooltipPopupDelay="1500" tooltipPlacement="bottom">         
+	<button type="button" class="btn btn-default statisMenuButtonDesktop" (click)="isHidden = !isHidden"  (click)="onOpen()" [class.focus]="!isHidden">
+		<!--tooltip="Zobrazení statistiky" tooltipPopupDelay="1500" tooltipPlacement="bottom">         -->
           <span class="glyphicon glyphicon-signal" aria-hidden="true"></span>
           <span class="description">Statistiky čidla</span>
 		  <span class="caret"></span>
