--- a/src/app/components/about.app.component.html
+++ b/src/app/components/about.app.component.html
@@ -1,4 +1,5 @@
-<div id="aboutAppId" class="aboutApp" tooltip="O aplikaci" tooltipPopupDelay="1500" tooltipPlacement="bottom">
+<!--<div id="aboutAppId" class="aboutApp" tooltip="O aplikaci" tooltipPopupDelay="1500" tooltipPlacement="bottom">-->
+<div id="aboutAppId" class="aboutApp">
 	<button (click)="lgModal.show()" type="button" class="btn btn-default aboutAppButton" *showItBootstrap="['xl','lg']">
 		<!--[class.aboutAppButton]="!isMobile()" [class.aboutAppMobileButton]="isMobile()" -->
 		<span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>
