--- a/src/app/components/map/overlays.menu.component.html
+++ b/src/app/components/map/overlays.menu.component.html
@@ -1,5 +1,5 @@
-<div id="overlaysMenuId" class="overlaysMenuDesktop" *showItBootstrap="['xl','lg','md']"
-tooltip="Výběr mapové vrstvy" tooltipPopupDelay="1500" tooltipPlacement="bottom">
+<!--<div id="overlaysMenuId" class="overlaysMenuDesktop" *showItBootstrap="['xl','lg','md']" tooltip="Výběr mapové vrstvy" tooltipPopupDelay="1500" tooltipPlacement="bottom">-->
+<div id="overlaysMenuId" class="overlaysMenuDesktop" *showItBootstrap="['xl','lg','md']">
 		<div class="btn-group layer-button" dropdown autoClose="disabled">
 			<button id="single-button" type="button" class="btn btn-default layer-button" dropdownToggle autoClose="disabled">
         <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
@@ -35,11 +35,7 @@ tooltip="Výběr mapové vrstvy" tooltipPopupDelay="1500" tooltipPlacement="bott
 		</div>
 </div>
 
-<div id="overlaysMenuId" 
-
-*showItBootstrap="['xs','sm']"
-
- class="overlaysMenuMobile">
+<div id="overlaysMenuId" *showItBootstrap="['xs','sm']" class="overlaysMenuMobile">
   <button id="single-button" (click)="lgModal.show()" type="button" class="btn btn-default layer-button"> 
   	<span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
   </button>
