--- a/src/app/components/statistics/senzor.menu.component.html
+++ b/src/app/components/statistics/senzor.menu.component.html
@@ -1,4 +1,5 @@
-<div id="senzorMenuId" *hideItDevice="['mobile']" class="senzor-button" tooltip="Výběr čidla" tooltipPopupDelay="1500" tooltipPlacement="bottom">
+<div id="senzorMenuId" *hideItDevice="['mobile']" class="senzor-button" >
+<!--tooltip="Výběr čidla" tooltipPopupDelay="1500" tooltipPlacement="bottom">-->
 	<div class="btn-group" dropdown>
 
 		<button *showItBootstrap="['sm','xs']" id="single-button" type="button" class="btn btn-default dropDownButton smallBtn" dropdownToggle>
