--- a/src/app/components/about.app.component.html
+++ b/src/app/components/about.app.component.html
@@ -56,6 +56,7 @@
 					<p>Více viz. instruktážní video:</p>
 						<iframe  *hideItDevice="['mobile']"  id="ytplayer" type="text/html" src="https://www.youtube.com/embed/aT-Tc_rrIKs?autoplay=0" frameborder="0" class="showOnDesktop" allowfullscreen="allowfullscreen" mozallowfullscreen="mozallowfullscreen" msallowfullscreen="msallowfullscreen" oallowfullscreen="oallowfullscreen" webkitallowfullscreen="webkitallowfullscreen"></iframe>
 						<iframe  *showItDevice="['mobile']"  id="ytplayer" type="text/html" src="https://www.youtube.com/embed/aT-Tc_rrIKs?autoplay=0" frameborder="0" class="showOnMobileLandPotrait" allowfullscreen="allowfullscreen" mozallowfullscreen="mozallowfullscreen" msallowfullscreen="msallowfullscreen" oallowfullscreen="oallowfullscreen" webkitallowfullscreen="webkitallowfullscreen"></iframe>
+						<p>Pokud se video nezobrazuje správně, je k dispozici <a href="https://www.youtube.com/watch?v=aT-Tc_rrIKs" target="_blank">zde</a>.</p> 
 					<br>
 					<br>
 					<br>
@@ -78,13 +79,13 @@
 						T: +420 236 072 111<br>
 						E: info@oksystem.cz<br>
 					</p>
-					<p><a href="http://www.oksystem.cz">www.oksystem.cz</a></p>
+					<p><a href="http://www.oksystem.cz " target="_blank">www.oksystem.cz</a></p>
 					<br>
 					<br>
 					<h4>O společnosti OKsystem a.s.</h4>
 					<p>OKsystem je česká softwarová společnost s mezinárodní působností. Na trhu informačních technologií jsme již od roku 1990. Naše programy používají desítky tisíc uživatelů v soukromém sektoru i veřejné správě. Máme zákazníky zejména v České republice a dodáváme inovativní software i v Evropě a USA.</p>
 					<br>
-					<p>Více informací naleznete na <a href="http://www.oksystem.com/cz/">www.oksystem.cz</a></p>
+					<p>Více informací naleznete na <a href="http://www.oksystem.com/cz/" target="_blank">www.oksystem.cz</a></p>
 					<br>
 					verze aplikace: {{appVersion}}
 				</div>
