--- a/src/app/components/statistics/statistics.component.html
+++ b/src/app/components/statistics/statistics.component.html
@@ -33,6 +33,10 @@
 					<h4 class="modal-title">Výběr statistik </h4>
 				</div>
 				<div class="modal-body">
+					<div class="heading">
+						Zjištěné průměry hluku z čidla za období
+					</div>
+					<br>
 					<tabs-statis></tabs-statis>
 				</div>
 			</div>
