drobne upravy textu

--- a/src/app/components/statistics/statistics.component.html
+++ b/src/app/components/statistics/statistics.component.html
@@ -31,11 +31,11 @@
 						<span aria-hidden="true">&times;</span>
 					</button>
 					<h4 class="modal-title">Výběr statistik </h4>
-				</div>
-				<div class="modal-body">
-					<div class="heading">
+					<div class="headingMobile">
 						Zjištěné průměry hluku z čidla za období
 					</div>
+				</div>
+				<div class="modal-body">
 					<br>
 					<tabs-statis></tabs-statis>
 				</div>
