--- a/src/app/components/statistics/statistics.component.css
+++ b/src/app/components/statistics/statistics.component.css
@@ -41,3 +41,15 @@
   margin-top: 3px;
   margin-bottom: 3px;
 }
+
+.headingMobile {
+  width: 100%;
+  text-align: center;
+  font-weight: 600;
+  margin-top: 8px;
+  margin-bottom: -5px;
+}
+
+.modal-body {
+  padding-top: 0;
+}
