uprava tooltipu cidla

--- a/src/app/components/statistics/table.component.html
+++ b/src/app/components/statistics/table.component.html
@@ -2,7 +2,7 @@
 	<thead>
 		<tr>
 			<th>Období měření</th>
-			<th>Průměrná intenzita hluku [db]</th>
+			<th>Hodnota [db]</th>
 		</tr>
 	</thead>
 	<tbody>
